--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "00-practice-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mnoorzai21.github.io/create-react-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^4.0.0",
     "pretty": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
